compiler/tree-sitter-yabo/test/corpus/simple.txt
=============
Simple Parser
=============

def for[u8] *> complex = {
  real: f32_el,
  imag: f32_el,
}

---

(source_file
  (parser_definition
    from: (type_array
      expr: (parserdef_ref
        name: (identifier)))
    name: (identifier)
    to: (parser_block
      content: (parser_sequence
        (parse_statement
	       name: (identifier)
	       parser: (identifier))
        (parse_statement
	       name: (identifier)
	       parser: (identifier))))))

=============
Choice Parser
=============

def for[u8] *> choice = {
    if ascii,
    return: utf8char,
  ;
    return: utf8char,
}

---

(source_file
  (parser_definition
    from: (type_array
      expr: (parserdef_ref
        name: (identifier)))
    name: (identifier)
    to: (parser_block 
      content: (parser_choice
        left: (parser_sequence
	        (parse_statement
      	    parser: (unary_expression
             right: (identifier)))
      	  (parse_statement
      	    name: (retvrn)
      	    parser: (identifier)))
	      right: (parser_sequence
          (parse_statement
      	    name: (retvrn)
      	    parser: (identifier)))))))

=============
Let Statement
=============

def for[u8] *> seven = {
  val: u8,
  let return: u8 = 7,
}

---

(source_file
  (parser_definition
    from: (type_array
      expr: (parserdef_ref
        name: (identifier)))
    name: (identifier)
    to: (parser_block
      content: (parser_sequence
        (parse_statement
  	      name: (identifier)
        	parser: (identifier))
        (let_statement
        	name: (retvrn)
        	ty: (parserdef_ref
            name: (identifier))
        	expr: (number_literal))))))

=======
Comment
=======

// comment
def for[u8] *> test = ~

---

(source_file
  (parser_definition
    (type_array
      (parserdef_ref
        (identifier)))
    (identifier)
    (single)))
